[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Mohammad Qasim <qasim_kamran2007@@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
langchain-openai = "^0.2.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
